--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About this project</title>
-</head>
-<body>
-  <%= Math.random() %>
+<%- include('header.ejs') -%>
+
+  <div id='root'><%- content -%></div>
+  
 </body>
 </html>
