Loading Data with React

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
-<%- include('header.ejs') -%>
+<%- include('header') -%>
 
-  <div id='root'><%- content -%></div>
-  
-</body>
-</html>
+  <div id='root'><%- content %></div>
+
+<%- include('footer') -%>
